# feed-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  feed  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml
config/: feeds.yaml
docs/: ARCHITECTURE.md  FEATURES.md  GIT_HISTORY_POLICY.md  OPERATIONS.md  ROADMAP.md  cli-robustness-analysis.md
docs/plans/: llm-provider-refactor.md
docs/sessions/: COMPACT_audit_and_rename_2026-01-25.md  COMPACT_cli-robustness-audit_2026-02-03.md
docs/setup/: 00-PROJECT-OVERVIEW.md  01-PHASE-SETUP.md  02-PHASE-INGEST.md  04-PHASE-DELIVER.md  05-PHASE-ORCHESTRATE.md  06-PHASE-POLISH.md  07-QUICK-REFERENCE.md
docs/skills/compact-session/: SKILL.md
docs/skills/compact-session/assets/: summary-template.md
docs/skills/compact-session/references/: examples.md
scripts/: healthcheck.py  list_models.py  preview_email.py  run_analyze.py  setup_cron.py  setup_launchd.py  verify_setup.py
src/: cli.py  config.py  models.py  scheduler.py
src/analyze/: __init__.py  digest_builder.py  prompts.py  summarizer.py
src/deliver/templates/: digest.html  digest.txt
src/ingest/: feeds.py
src/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
src/pricing/data/: openai.json
src/storage/: cache.py  db.py
tests/: test_analyze.py  test_cache.py  test_config.py  test_dead_code.py  test_ingest.py  test_llm.py  test_scheduler.py
